# TWanSigmaGraph

./: LICENSE.txt  README.md  Requirements.txt  SigmaGraphNode.py  TWanSigmaGraph.py  __init__.py  pyproject.toml
.github/workflows/: publish.yml
js/: SigmaGraphWidget.js  TWanSigmaGraphWidget.js
